noinst_LIBRARIES = libOptions.a

libOptions_a_CPPFLAGS = -I$(top_srcdir)/Misc -I$(top_srcdir)/Messages

libOptions_a_SOURCES = OptAAAAuthentication.cpp OptAAAAuthentication.h
libOptions_a_SOURCES += OptAddr.cpp OptAddr.h
libOptions_a_SOURCES += OptAddrLst.cpp OptAddrLst.h
libOptions_a_SOURCES += OptAuthentication.cpp OptAuthentication.h Opt.cpp OptDUID.cpp OptDUID.h OptEmpty.cpp OptEmpty.h OptFQDN.cpp OptFQDN.h OptGeneric.cpp OptGeneric.h Opt.h OptIAAddress.cpp OptIAAddress.h OptIA_NA.cpp OptIA_NA.h OptIA_PD.cpp OptIA_PD.h OptIAPrefix.cpp OptIAPrefix.h OptInteger.cpp OptInteger.h OptKeyGeneration.cpp OptKeyGeneration.h OptOptionRequest.cpp OptOptionRequest.h OptStatusCode.cpp OptStatusCode.h OptString.cpp OptString.h OptStringLst.cpp OptStringLst.h OptTA.cpp OptTA.h OptUserClass.cpp OptUserClass.h OptVendorData.cpp OptVendorData.h OptVendorSpecInfo.cpp OptVendorSpecInfo.h
libOptions_a_SOURCES += OptReconfigureMsg.cpp OptReconfigureMsg.h
