SUBDIRS = .

dist_noinst_DATA = addrpack.c bison.cc bison.h bison.h client-win32.cpp client-win32.vs2003.rc client-win32.vs2003.suo client-win32.vs2008.vcproj ClntService.cpp ClntService.h config.h dibbler-config.h dibbler-requestor.rc ipv6-wrapper.c lowlevel-win32.c relay-win32.cpp relay-win32.vs2003.rc relay-win32.vs2003.suo relay-win32.vs2008.vcproj RelService.cpp RelService.h requestor-win32.vs2003.suo requestor-win32.vs2003.vcproj requestor-win32.vs2008.vcproj resource1.h resource2.h resource8.h resource.h resource-requestor.h server-win32.cpp server-win32.vs2003.rc server-win32.vs2008.vcproj SrvService.cpp SrvService.h stdint.h unistd.h WinService.cpp WinService.h
dist_noinst_DATA += client.log client-win32.ico dibbler.iss dibbler-win32.vs2008.sln relay.log relay-win32.ico server.log server-win32.ico