SUBDIRS = .

dist_noinst_DATA = addrpack.c client-win32.cpp ClntService.cpp ClntService.h dibbler-config.h
dist_noinst_DATA += client-win32.vs2013.rc client-win32.vs2013.vcxproj client-win32.vs2013.vcxproj.filters
dist_noinst_DATA += dibbler-requestor.rc lowlevel-win32.c relay-win32.cpp stdbool.h
dist_noinst_DATA += relay-win32.vs2013.rc relay-win32.vs2013.vcxproj relay-win32.vs2013.vcxproj.filters
dist_noinst_DATA += RelService.cpp RelService.h
dist_noinst_DATA += requestor-win32.vs2013.vcxproj requestor-win32.vs2013.vcxproj.filters
dist_noinst_DATA += resource1.h resource2.h resource8.h resource.h
dist_noinst_DATA += resource-requestor.h server-win32.cpp
dist_noinst_DATA += server-win32.vs2013.rc server-win32.vs2013.vcxproj server-win32.vs2013.vcxproj.filters
dist_noinst_DATA += SrvService.cpp SrvService.h unistd.h WinService.cpp WinService.h
dist_noinst_DATA += client.log client-win32.ico dibbler.iss dibbler-win32.vs2013.sln relay.log
dist_noinst_DATA += relay-win32.ico server.log server-win32.ico
