noinst_LIBRARIES = libRelCfgMgr.a

libRelCfgMgr_a_CPPFLAGS = -I$(top_srcdir)/Misc -I$(top_srcdir)/CfgMgr
libRelCfgMgr_a_CPPFLAGS += -I$(top_srcdir)/Options -I$(top_srcdir)/RelOptions
libRelCfgMgr_a_CPPFLAGS += -I$(top_srcdir)/IfaceMgr -I$(top_srcdir)/RelIfaceMgr
libRelCfgMgr_a_CPPFLAGS += -I$(top_srcdir)/RelMessages -I$(top_srcdir)/Messages

libRelCfgMgr_a_SOURCES = RelCfgIface.cpp RelCfgIface.h RelCfgMgr.cpp RelCfgMgr.h RelLexer.cpp RelLexer.h RelParser.cpp RelParser.h RelParsGlobalOpt.cpp RelParsGlobalOpt.h RelParsIfaceOpt.cpp RelParsIfaceOpt.h
