noinst_LIBRARIES = libRelIfaceMgr.a

libRelIfaceMgr_a_CPPFLAGS = -I$(top_srcdir)/Misc -I$(top_srcdir)/IfaceMgr
libRelIfaceMgr_a_CPPFLAGS += -I$(top_srcdir)/RelCfgMgr -I$(top_srcdir)/CfgMgr
libRelIfaceMgr_a_CPPFLAGS += -I$(top_srcdir)/Options -I$(top_srcdir)/RelOptions
libRelIfaceMgr_a_CPPFLAGS += -I$(top_srcdir)/RelMessages -I$(top_srcdir)/Messages

libRelIfaceMgr_a_SOURCES = RelIfaceMgr.cpp RelIfaceMgr.h
