noinst_LIBRARIES = libRelMessages.a

libRelMessages_a_CPPFLAGS = -I$(top_srcdir)/Misc
libRelMessages_a_CPPFLAGS += -I$(top_srcdir)/Messages
libRelMessages_a_CPPFLAGS += -I$(top_srcdir)/Options -I$(top_srcdir)/RelOptions

libRelMessages_a_SOURCES = RelMsg.cpp RelMsgGeneric.cpp RelMsgGeneric.h RelMsg.h RelMsgRelayForw.cpp RelMsgRelayForw.h RelMsgRelayRepl.cpp RelMsgRelayRepl.h
