noinst_LIBRARIES = libRelOptions.a

libRelOptions_a_CPPFLAGS = -I$(top_srcdir)/Misc
libRelOptions_a_CPPFLAGS += -I$(top_srcdir)/Options -I$(top_srcdir)/RelOptions

libRelOptions_a_SOURCES = RelOptEcho.cpp RelOptEcho.h RelOptGeneric.cpp RelOptGeneric.h RelOptInterfaceID.cpp RelOptInterfaceID.h RelOptRelayMsg.cpp RelOptRelayMsg.h RelOptRemoteID.cpp RelOptRemoteID.h
