noinst_LIBRARIES = libRelTransMgr.a

libRelTransMgr_a_CPPFLAGS = -I$(top_srcdir)/Misc
libRelTransMgr_a_CPPFLAGS += -I$(top_srcdir)/Options -I$(top_srcdir)/RelOptions
libRelTransMgr_a_CPPFLAGS += -I$(top_srcdir)/RelCfgMgr -I$(top_srcdir)/CfgMgr
libRelTransMgr_a_CPPFLAGS += -I$(top_srcdir)/Messages -I$(top_srcdir)/RelMessages
libRelTransMgr_a_CPPFLAGS += -I$(top_srcdir)/IfaceMgr -I$(top_srcdir)/RelIfaceMgr

libRelTransMgr_a_SOURCES = RelTransMgr.cpp RelTransMgr.h
