noinst_LIBRARIES = libRequestor.a

libRequestor_a_CPPFLAGS  = -I$(top_srcdir)/Misc -I$(top_srcdir)/Messages
libRequestor_a_CPPFLAGS += -I$(top_srcdir)/Options -I$(top_srcdir)/IfaceMgr

libRequestor_a_SOURCES = ReqCfgMgr.cpp ReqCfgMgr.h ReqMsg.cpp ReqMsg.h ReqOpt.cpp ReqOpt.h ReqOpts.cpp ReqTransMgr.cpp ReqTransMgr.h
