noinst_LIBRARIES = libSrvAddrMgr.a

libSrvAddrMgr_a_CPPFLAGS = -I$(top_srcdir)/Misc -I$(top_srcdir)/AddrMgr
libSrvAddrMgr_a_CPPFLAGS += -I$(top_srcdir)/SrvCfgMgr -I$(top_srcdir)/CfgMgr
libSrvAddrMgr_a_CPPFLAGS += -I$(top_srcdir)/Options -I$(top_srcdir)/SrvOptions

libSrvAddrMgr_a_SOURCES = SrvAddrMgr.cpp SrvAddrMgr.h
