noinst_LIBRARIES = libSrvIfaceMgr.a

libSrvIfaceMgr_a_CPPFLAGS = -I$(top_srcdir)/Misc -I$(top_srcdir)/IfaceMgr
libSrvIfaceMgr_a_CPPFLAGS += -I$(top_srcdir)/SrvCfgMgr -I$(top_srcdir)/CfgMgr
libSrvIfaceMgr_a_CPPFLAGS += -I$(top_srcdir)/Options -I$(top_srcdir)/SrvOptions
libSrvIfaceMgr_a_CPPFLAGS += -I$(top_srcdir)/AddrMgr -I$(top_srcdir)/SrvAddrMgr -I$(top_srcdir)/SrvTransMgr
libSrvIfaceMgr_a_CPPFLAGS += -I$(top_srcdir)/SrvMessages -I$(top_srcdir)/Messages
libSrvIfaceMgr_a_CPPFLAGS += -I$(top_srcdir)/poslib/poslib -I$(top_srcdir)/poslib

libSrvIfaceMgr_a_SOURCES = SrvIfaceIface.cpp SrvIfaceIface.h SrvIfaceMgr.cpp SrvIfaceMgr.h
