noinst_LIBRARIES = libSrvMessages.a

libSrvMessages_a_CPPFLAGS = -I$(top_srcdir)/Misc -I$(top_srcdir)/Messages -I$(top_srcdir)/Options -I$(top_srcdir)/SrvOptions
libSrvMessages_a_CPPFLAGS += -I$(top_srcdir)/SrvIfaceMgr -I$(top_srcdir)/IfaceMgr -I$(top_srcdir)/SrvCfgMgr
libSrvMessages_a_CPPFLAGS += -I$(top_srcdir)/CfgMgr -I$(top_srcdir)/AddrMgr -I$(top_srcdir)/SrvAddrMgr
libSrvMessages_a_CPPFLAGS += -I$(top_srcdir)/SrvTransMgr
libSrvMessages_a_CPPFLAGS += -I$(top_srcdir)/poslib/poslib -I$(top_srcdir)/poslib

libSrvMessages_a_SOURCES = SrvMsgAdvertise.cpp SrvMsgAdvertise.h SrvMsgConfirm.cpp SrvMsgConfirm.h SrvMsg.cpp SrvMsgDecline.cpp SrvMsgDecline.h SrvMsg.h SrvMsgInfRequest.cpp SrvMsgInfRequest.h SrvMsgLeaseQuery.cpp SrvMsgLeaseQuery.h SrvMsgLeaseQueryReply.cpp SrvMsgLeaseQueryReply.h SrvMsgRebind.cpp SrvMsgRebind.h SrvMsgRelease.cpp SrvMsgRelease.h SrvMsgRenew.cpp SrvMsgRenew.h SrvMsgReply.cpp SrvMsgReply.h SrvMsgRequest.cpp SrvMsgRequest.h SrvMsgSolicit.cpp SrvMsgSolicit.h
