noinst_LIBRARIES = libSrvOptions.a

libSrvOptions_a_CPPFLAGS = -I$(top_srcdir)/Misc -I$(top_srcdir)/Options -I$(top_srcdir)/SrvMessages
libSrvOptions_a_CPPFLAGS += -I$(top_srcdir)/Messages -I$(top_srcdir)/SrvIfaceMgr -I$(top_srcdir)/IfaceMgr
libSrvOptions_a_CPPFLAGS += -I$(top_srcdir)/SrvCfgMgr -I$(top_srcdir)/CfgMgr -I$(top_srcdir)/SrvAddrMgr
libSrvOptions_a_CPPFLAGS += -I$(top_srcdir)/AddrMgr -I$(top_srcdir)/SrvTransMgr

#libSrvOptions_a_SOURCES = SrvOptAAAAuthentication.cpp SrvOptAAAAuthentication.h
libSrvOptions_a_SOURCES = SrvOptAddrParams.cpp SrvOptAddrParams.h
#libSrvOptions_a_SOURCES += SrvOptAuthentication.cpp SrvOptAuthentication.h
#libSrvOptions_a_SOURCES += SrvOptClientIdentifier.cpp SrvOptClientIdentifier.h
#libSrvOptions_a_SOURCES += SrvOptDNSServers.cpp SrvOptDNSServers.h
#libSrvOptions_a_SOURCES += SrvOptDomainName.cpp SrvOptDomainName.h
#libSrvOptions_a_SOURCES += SrvOptEcho.cpp SrvOptEcho.h
#libSrvOptions_a_SOURCES += SrvOptElapsed.cpp SrvOptElapsed.h
libSrvOptions_a_SOURCES += SrvOptFQDN.cpp SrvOptFQDN.h
libSrvOptions_a_SOURCES += SrvOptIAAddress.cpp SrvOptIAAddress.h
libSrvOptions_a_SOURCES += SrvOptIA_NA.cpp SrvOptIA_NA.h
libSrvOptions_a_SOURCES += SrvOptIA_PD.cpp SrvOptIA_PD.h
libSrvOptions_a_SOURCES += SrvOptIAPrefix.cpp SrvOptIAPrefix.h
libSrvOptions_a_SOURCES += SrvOptInterfaceID.cpp SrvOptInterfaceID.h
#libSrvOptions_a_SOURCES += SrvOptKeyGeneration.cpp SrvOptKeyGeneration.h
#libSrvOptions_a_SOURCES += SrvOptLifetime.cpp SrvOptLifetime.h
libSrvOptions_a_SOURCES += SrvOptLQ.cpp SrvOptLQ.h
#libSrvOptions_a_SOURCES += SrvOptNISDomain.cpp SrvOptNISDomain.h
#libSrvOptions_a_SOURCES += SrvOptNISPDomain.cpp SrvOptNISPDomain.h
#libSrvOptions_a_SOURCES += SrvOptNISPServer.cpp SrvOptNISPServer.h
#libSrvOptions_a_SOURCES += SrvOptNISServer.cpp SrvOptNISServer.h
#libSrvOptions_a_SOURCES += SrvOptNTPServers.cpp SrvOptNTPServers.h
#libSrvOptions_a_SOURCES += SrvOptOptionRequest.cpp SrvOptOptionRequest.h
#libSrvOptions_a_SOURCES += SrvOptPreference.cpp SrvOptPreference.h
#libSrvOptions_a_SOURCES += SrvOptServerIdentifier.cpp SrvOptServerIdentifier.h
#libSrvOptions_a_SOURCES += SrvOptServerUnicast.cpp SrvOptServerUnicast.h
#libSrvOptions_a_SOURCES += SrvOptSIPDomain.cpp SrvOptSIPDomain.h
#libSrvOptions_a_SOURCES += SrvOptSIPServer.cpp SrvOptSIPServer.h
#libSrvOptions_a_SOURCES += SrvOptStatusCode.cpp SrvOptStatusCode.h
libSrvOptions_a_SOURCES += SrvOptTA.cpp SrvOptTA.h
#libSrvOptions_a_SOURCES += SrvOptTimeZone.cpp SrvOptTimeZone.h
#libSrvOptions_a_SOURCES += SrvOptUserClass.cpp SrvOptUserClass.h
