noinst_LIBRARIES = libSrvTransMgr.a

libSrvTransMgr_a_CPPFLAGS = -I$(top_srcdir)/SrvCfgMgr -I$(top_srcdir)/CfgMgr -I$(top_srcdir)/Misc
libSrvTransMgr_a_CPPFLAGS += -I$(top_srcdir)/Options -I$(top_srcdir)/SrvOptions
libSrvTransMgr_a_CPPFLAGS += -I$(top_srcdir)/AddrMgr -I$(top_srcdir)/SrvAddrMgr
libSrvTransMgr_a_CPPFLAGS += -I$(top_srcdir)/SrvMessages -I$(top_srcdir)/Messages
libSrvTransMgr_a_CPPFLAGS += -I$(top_srcdir)/SrvIfaceMgr -I$(top_srcdir)/IfaceMgr

libSrvTransMgr_a_SOURCES = SrvTransMgr.cpp SrvTransMgr.h
